--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <repository>
             <id>blackypaw-repo</id>
             <name>SimpleConfig repository</name>
-            <url>http://repo.blackypaw.com:8081/nexus/content/groups/public/</url>
+            <url>http://repo.blackypaw.com/content/groups/public/</url>
         </repository>
     </repositories>
 
